cambio de databasemanager a jdbimanager con entities y dao, test en proceso