@@ -56,6 +56,8 @@ dependencies {
     implementation("org.jdbi:jdbi3-kotlin:3.48.0") // Kotlin extension
     implementation("org.jdbi:jdbi3-kotlin-sqlobject:3.48.0") // Kotlin extension para SQL Object
     implementation("org.jetbrains.kotlin:kotlin-stdlib:1.9.23")
+    // Reflexión de tipos genéricos, las versiones más recientes de JDBI no la incluyen por defecto
+    implementation 'io.leangen.geantyref:geantyref:1.3.0'
 
 
     // Librería para serialización en JSON
@@ -99,9 +101,25 @@ test {
     jvmArgs(
              "--add-opens", "java.base/java.lang=ALL-UNNAMED",
              "--add-opens", "java.base/java.util=ALL-UNNAMED",
+             "--add-opens", "java.base/java.sql=ALL-UNNAMED",
+             "--add-opens", "java.base/java.time=ALL-UNNAMED",
+             "--add-opens", "java.base/java.io=ALL-UNNAMED",
+             "--add-opens", "java.base/java.nio.file=ALL-UNNAMED",
+             "--add-opens", "java.base/java.net=ALL-UNNAMED",
+             "--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED",
+             "--add-opens", "java.base/java.text=ALL-UNNAMED",
+             "--add-opens", "java.sql/java.sql=ALL-UNNAMED",
+             "--add-opens", "java.desktop/java.awt.font=ALL-UNNAMED",
+             "--add-opens", "srangeldev.proyectoequipofutboljavafx/srangeldev.proyectoequipofutboljavafx.newteam.repository=ALL-UNNAMED",
              "--add-reads", "org.junit.jupiter.api=kotlin.stdlib",
              "--add-reads", "srangeldev.proyectoequipofutboljavafx=kotlin.test"
      )
+}
+
+run {
+    jvmArgs = [
+            "--add-opens", "srangeldev.proyectoequipofutboljavafx.newteam.models/kotlin.reflect=ALL-UNNAMED"
+    ]
 }
 
 jlink {
@@ -168,7 +186,6 @@ jacocoTestReport {
             ])
         }))
 
-        // Ensure Kotlin source and test files are included
         sourceDirectories.setFrom(files(
                 "src/main/kotlin",
                 "src/main/java",
@@ -176,7 +193,7 @@ jacocoTestReport {
         ))
     }
 }
-
+/*
 jacocoTestCoverageVerification {
     violationRules {
         rule {
@@ -185,10 +202,24 @@ jacocoTestCoverageVerification {
             }
         }
     }
-}
+}*/
 
 task testCoverage(group: 'verification', description: 'Runs the unit tests with coverage') {
     dependsOn test,
             jacocoTestReport,
             jacocoTestCoverageVerification
+}
+
+// Asegurar que Kotlin compile antes que Java
+compileJava.dependsOn compileKotlin
+
+// Fusionar las clases Kotlin en el mismo output que Java
+tasks.named('compileKotlin') {
+    kotlinOptions {
+        destinationDirectory.set(file("build/classes/java/main"))
+    }
+}
+// Opcional pero recomendado: limpiar el proyecto completo
+clean {
+    delete "build"
 }
